--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Titulo Central
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,39 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Titulo Central</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <h1>Menu de ingreso</h1>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Ingreso de usuario</ion-card-title>
+
+        <ion-avatar id="avatar">
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+      </ion-card-header>
+
+      <ion-card-content>
+        <ion-list>
+          <ion-item>
+            <ion-input [(ngModel)]="user.username" label="Nombre Usuario" labelPlacement="floating"
+              placeholder="Ingrese su usuario"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input [(ngModel)]="user.password" label="Contraseña" type="password" labelPlacement="floating"
+              placeholder="Ingrese su contraseña">
+            </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-toggle>Recuerdame</ion-toggle><br /><br />
+          </ion-item>
+        </ion-list>
+
+        <ion-button (click)="mostrarConsola()" size="small" shape="round">Conectar</ion-button>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
